fix: Text with sub/superscript doesn't fit the borders

--- a/views/scss/qti/_choice.scss
+++ b/views/scss/qti/_choice.scss
@@ -210,7 +210,11 @@
         max-height: 100%;
         display: flex;
         justify-content: center;
-        flex-direction: column;
+        justify-content: flex-start;
+        flex-direction: row;
+        align-content: center;
+        flex-wrap: wrap;
+        align-items: baseline;
     }
 
 
